--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,16 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+@theme {
+	--breakpoint-xs: 450px;
+}
+
+@layer base {
+	html,
+	body {
+		height: 100%;
+	}
+}
 
 /* :root {
   --background: #ffffff;
